--- a/styles/oceanos.css
+++ b/styles/oceanos.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@100..900&family=Lexend+Deca:wght@100..900&display=swap');
 
 :root {
-    --azul-primaria: #FE424D;
+    --azul-primaria: #086FB1;
     --azul-escuro: #022D41;
     --azul-claro: #72A7D3;
 
